hphp/hack/test/typecheck/coeffects/syntax_elaboration.php.exp
File "syntax_elaboration.php", line 17, characters 43-55:
Unbound name: `HH\Contexts\Unsafe\WriteProperty` (Naming[2049])
File "syntax_elaboration.php", line 17, characters 43-55:
Unbound name: `HH\Contexts\WriteProperty` (Naming[2049])
File "syntax_elaboration.php", line 32, characters 34-53:
Unbound name: `HH\Contexts\AccessStaticVariable` (Naming[2049])
File "syntax_elaboration.php", line 32, characters 34-53:
Unbound name: `HH\Contexts\Unsafe\AccessStaticVariable` (Naming[2049])
